--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">WLBaz2023JGT</string>
+    <string name="login_component_button_login">Iniciar sesión</string>
+    <string name="login_component_label_signup">Registrarse como nuevo usuario</string>
+    <string name="login_component_label_header">Iniciar sesión</string>
 </resources>
