--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="signup_component_button_signup">Registrarse</string>
     <string name="signup_component_label_login">Iniciar sesión</string>
     <string name="for_adults_advice">Película para adultos</string>
+    <string name="movies_activity_logout_button">Cerrar sesión</string>
 </resources>
